<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".TelaCarregaEvento">

    <TextView
        android:id="@+id/nomeCarregamentoEventos"
        android:layout_width="350sp"
        android:layout_height="25sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="567dp"
        android:hint="@string/nome"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002" />

    <TextView
        android:id="@+id/datahoraCarregamentoEventos"
        android:layout_width="350sp"
        android:layout_height="25sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/data_e_hora"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeCarregamentoEventos"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/enderecoCarregamentoEvento"
        android:layout_width="350sp"
        android:layout_height="25sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="311dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/endereco"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datahoraCarregamentoEventos"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/numeroCarregamentoEvento"
        android:layout_width="80sp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/numero"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toEndOf="@+id/cepCarregamentoEvento"
        app:layout_constraintTop_toBottomOf="@+id/enderecoCarregamentoEvento"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/cepCarregamentoEvento"
        android:layout_width="250sp"
        android:layout_height="25sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="337dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/cep"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enderecoCarregamentoEvento"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/bairroCarregamentoEvento"
        android:layout_width="350sp"
        android:layout_height="25sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="337dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/bairro"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cepCarregamentoEvento"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cidadeCarregamentoEvento"
        android:layout_width="350sp"
        android:layout_height="25dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/cidade"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bairroCarregamentoEvento"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/estadoCarregamentoEvento"
        android:layout_width="350sp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="337dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/estado"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cidadeCarregamentoEvento"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/paisCarregamentoEvento"
        android:layout_width="350sp"
        android:layout_height="25sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="337dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/pais"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estadoCarregamentoEvento"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/likesCarregamentoEvento"
        android:layout_width="150sp"
        android:layout_height="25sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="79dp"
        android:text="@string/likes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paisCarregamentoEvento"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/deslikesCarregamentoEvento"
        android:layout_width="150sp"
        android:layout_height="25sp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/deslikes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/likesCarregamentoEvento"
        app:layout_constraintTop_toBottomOf="@+id/paisCarregamentoEvento"
        app:layout_constraintVertical_bias="0.705" />

</android.support.constraint.ConstraintLayout>